syntax="proto3";

message StatusRequest {
  int32 version = 1;
}

message StatusResponse {
  int32 version = 1;
  string basicInfo = 2;
}

service Agent {
  rpc GetStatus(StatusRequest) returns(StatusResponse) {}
}
